[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codemap"
version = "1.0.0"
description = "Intelligent Codebase Map for AI Agents — structured, token-efficient project summaries"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kris Kimmerle"}]
keywords = ["ai", "context", "codebase", "map", "summary", "llm", "developer-tools", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/codemap"
Issues = "https://github.com/kriskimmerle/codemap/issues"

[project.scripts]
codemap = "codemap:main"

[tool.setuptools]
py-modules = ["codemap"]
